fix: use top padding instead of top margin on mobile

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body {
     max-width: 100vw;
     padding-left: 48px;
     padding-right: 48px;
-    margin-top: 72px;
+    padding-top: 72px;
     font-size: 36px;
     clip-path: none;
   }
